--- a/analysis_scripts/Storage_heavy_node.ipynb
+++ b/analysis_scripts/Storage_heavy_node.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "fe56c707-82f6-4f33-b39a-484cacabe498",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_results = pd.read_csv(\"../Results/InvestmentModelResults/Loop_4models_indirect_neighbors_storage_heavy_country_SE03_1200.csv\")"
+    "df_results = pd.read_csv(\"../Results/InvestmentModelResults/Loop_4models_\")"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
